--- a/construction-website/contact.html
+++ b/construction-website/contact.html
@@ -69,9 +69,9 @@
             </div>
             <div class="contact-info">
                 <h3>Contact Information</h3>
-                <p><strong>Corporate Office:</strong> 123 Main St, City, Country</p>
-                <p><strong>Phone:</strong> +1 234 567 890</p>
-                <p><strong>Email:</strong> info@buildpro.com</p>
+                <p><strong>Corporate Office:</strong> 18th Floor, A-1805 Ajanara le garden</p>
+                <p><strong>Phone:</strong> 7484014785</p>
+                <p><strong>Email:</strong>buildwithshantispace@gmail.com</p>
                 <div class="social-media">
                     <h4>Follow Us</h4>
                     <a href="#" class="social-icon">in</a>
@@ -90,10 +90,10 @@
                 <p>Leading construction company delivering innovative and sustainable building solutions worldwide.</p>
             </div>
             <div class="footer-section">
-                <h3>Contact Info</h3>
-                <p>Corporate Office: 123 Main St, City, Country</p>
-                <p>Phone: +1 234 567 890</p>
-                <p>Email: info@buildpro.com</p>
+                <h3>7484014785</h3>
+                <p> 18th Floor, A-1805 Ajanara le garden</p>
+                <p>Phone: 7484014785</p>
+                <p>Email: buildwithshantispace@gmail.com</p>
             </div>
             <div class="footer-section social-media">
                 <h3>Follow Us</h3>
