--- a/construction-website/investors.html
+++ b/construction-website/investors.html
@@ -91,9 +91,9 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Info</h3>
-                <p>Corporate Office: 123 Main St, City, Country</p>
-                <p>Phone: +1 234 567 890</p>
-                <p>Email: info@buildpro.com</p>
+                <p>Corporate Office: 18th Floor, A-1805 Ajanara le garden</p>
+                <p>Phone: 7484014785</p>
+                <p>Email:buildwithshantispace@gmail.com</p>
             </div>
             <div class="footer-section social-media">
                 <h3>Follow Us</h3>
