--- a/construction-website/index.html
+++ b/construction-website/index.html
@@ -153,7 +153,7 @@
     <section id="showcase" class="showcase-section">
         <h2>Project Showcase</h2>
         <div class="showcase-slider">
-            <div class="slide">
+            <div class="slide active">
                 <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2" alt="Project 1"
                     onerror="this.src='https://via.placeholder.com/800x500?text=Project+1'">
                 <div class="slide-caption">Sustainable Commercial Complex</div>
@@ -183,9 +183,9 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Info</h3>
-                <p>Corporate Office: 123 Main St, City, Country</p>
-                <p>Phone: +1 234 567 890</p>
-                <p>Email: info@buildpro.com</p>
+                <p>Corporate Office: 18th Floor, A-1805 Ajanara le garden</p>
+                <p>Phone: 7484014785</p>
+                <p>Email:buildwithshantispace@gmail.com</p>
             </div>
             <div class="footer-section social-media">
                 <h3>Follow Us</h3>
